--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,14 @@ body {
   font-family: 'Oswald', sans-serif;
   color: #060D10;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  min-width: 1278px;
+  margin: 0 auto;
+  /* border: 1px solid red; */
 }
 
 
@@ -48,32 +56,36 @@ header {
   text-align: center;
 }
 
-.header-fade{
-  padding: 34px 0 ;
+.header-fade {
+  padding: 34px 0;
 
 }
 
-.header-wrap{
+.header-wrap {
   display: flex;
   justify-content: space-around;
+  padding: 34px 81px;
 }
 
 .header-btn {
+  padding: 8px 41px;
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
   line-height: 29px;
   background-color: #FFF;
-  border: 3px solid #fff ;
+  border: 3px solid #fff;
   box-sizing: border-box;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 
 
 .header-phone {
-  display: block;
+  display: inline-block;
+  color: #060D10;
   margin: 0px;
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
@@ -81,6 +93,7 @@ header {
   font-size: 28px;
   line-height: 34px;
   text-align: center;
+  text-decoration: none;
 }
 
 
@@ -98,8 +111,8 @@ header {
 
 }
 
-.promo-fade{
-  padding: 240px  0 260px 0;
+.promo-fade {
+  padding: 240px 0 260px 0;
   margin: 0 auto;
 }
 
@@ -127,13 +140,16 @@ header {
   /* text-align: center; */
 }
 
-.benefits-fade{
-  padding: 170px 0 ;
+.benefits-fade {
+  padding: 170px 0 100px;
 }
 
-.benefits-wrap{
+.benefits-wrap {
+
   display: flex;
   flex-wrap: wrap;
+  padding: 0;
+  margin: 100px 81px 0 81px;
   justify-content: space-between;
 }
 
@@ -142,14 +158,25 @@ header {
 .benefits-title {
   font-size: 48px;
   line-height: 53px;
+  text-transform: uppercase;
   text-align: center;
 }
 
 .benefits-item {
+  list-style: none;
+  flex-basis: calc(33.33% - 30px);
+  margin-bottom: 70px;
+  /* margin:0 81px 30px 81px; */
+
+}
+
+.benefits-title-small {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 500;
   font-size: 32px;
   line-height: 53px;
-  list-style: none;
-  width: 33.33%;
+  text-transform: uppercase;
 }
 
 .benefits-text {
@@ -159,6 +186,8 @@ header {
   font-size: 26px;
   line-height: 36px;
   opacity: 0.8;
+  text-align: left;
+
 }
 
 /* purchaise */
@@ -172,15 +201,25 @@ header {
 }
 
 
-.purchaise-feed{
+.purchaise-feed {
   padding: 170px 0 180px 0;
 }
+
 .purchaise-title {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 500;
   font-size: 48px;
   line-height: 80px;
+  text-transform: uppercase;
 }
 
 .purchaise-btn {
+  display: inline-block;
+  min-width: 513px;
+  padding: 20px 107px;
+  margin-top: 80px;
+  margin-bottom: 152px;
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -190,12 +229,19 @@ header {
   border: 3px solid #060D10;
   box-sizing: border-box;
   border-radius: 4px;
+  cursor: pointer;
+}
 
+.wrap-image {
+  display: flex;
+  justify-content: space-around;
+  margin: 130px 81px 180px;
 }
 
 .purchaise-img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background: #C4C4C4;
+  flex-basis: calc(25% - 30px);
 }
 
 /* footer */
@@ -204,8 +250,20 @@ footer {
   text-align: center;
 }
 
-.footer-feed{
-  padding: 35px 0;
+.footer-feed {
+  padding: 0;
+}
+
+.footer-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 35px 98px ;
+}
+
+.social-wrap{
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer-text {
@@ -215,6 +273,28 @@ footer {
   font-size: 20px;
   line-height: 33px;
   color: #fff;
+}
+
+.footer-social {
+  display: flex;
+  padding: 0;
+  margin: 0 50px;
+  list-style: none;
+  align-items: center;
+}
+
+.social-icon{
+  margin-left: 15px;
+
+}
+
+.social-link {
+  display: block;
+  width: 35px;
+  height: 35px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .footer-copyright {
